--- a/proje/Views/Shared/_Layout.cshtml
+++ b/proje/Views/Shared/_Layout.cshtml
@@ -25,13 +25,22 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Randevu" asp-action="Index">Randevu Al</a>
-                        </li>
-                         @if (User.Identity.IsAuthenticated)
-    {
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Musteri" asp-action="Profilim">Profilim</a>
-                        </li>
+                            @if (User.Identity.IsAuthenticated && User.IsInRole("Musteri"))
+                            {
+                            <li><a asp-controller="Randevu" asp-action="RandevuAl">Randevu Al</a></li>
+                            <li><a asp-controller="Musteri" asp-action="Profilim">Profilim</a></li>
+                        }
+
     }
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-danger" asp-controller="Admin" asp-action="Index">
+                                    Admin Panel
+                                </a>
+                            </li>
+                        }
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
