--- a/proje/Views/Shared/_LoginPartial.cshtml
+++ b/proje/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,7 @@
         <li class="nav-item">
             <form asp-area="Identity"
                   asp-page="/Account/Logout"
+                  asp-route-returnUrl="/Home/AnaSayfa"
                   method="post">
                 <button type="submit"
                         class="nav-link btn btn-link text-dark">
